[package]
name = "rundler-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
derive_more = "0.99.17"
ethers.workspace = true
futures.workspace = true
itertools.workspace = true
rand.workspace = true
reqwest.workspace = true
schnellru = "0.2.1"
tokio.workspace = true
tracing.workspace = true
url.workspace = true
