[package]
name = "rundler-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
alloy-primitives.workspace = true
alloy-rpc-types-eth.workspace = true

anyhow.workspace = true
derive_more = "0.99.18"
futures.workspace = true
itertools.workspace = true
metrics.workspace = true
rand.workspace = true
schnellru = "0.2.1"
tokio.workspace = true
tracing.workspace = true
url.workspace = true
