
[dependencies]

alloy-primitives.workspace = true
async-trait.workspace = true
rundler-provider.workspace = true
rundler-types.workspace = true
[package]
name = "rundler-bls"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false
